--- a/Corretor.ipynb
+++ b/Corretor.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        " ('do', 5124)]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "0.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +401,313 @@
        "'lógica'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "corretor(palavra_exemplo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('podemos', 'pyodemos'),\n",
+       " ('esse', 'esje'),\n",
+       " ('já', 'jrá'),\n",
+       " ('nosso', 'nossov'),\n",
+       " ('são', 'sãêo'),\n",
+       " ('dos', 'dosa'),\n",
+       " ('muito', 'muifo'),\n",
+       " ('imagem', 'iômagem'),\n",
+       " ('sua', 'ósua'),\n",
+       " ('também', 'tambéùm'),\n",
+       " ('ele', 'eme'),\n",
+       " ('fazer', 'èazer'),\n",
+       " ('temos', 'temfs'),\n",
+       " ('essa', 'eàssa'),\n",
+       " ('quando', 'quaôdo'),\n",
+       " ('vamos', 'vamvos'),\n",
+       " ('sobre', 'hsobre'),\n",
+       " ('java', 'sjava'),\n",
+       " ('das', 'daõs'),\n",
+       " ('agora', 'agorah'),\n",
+       " ('está', 'eòtá'),\n",
+       " ('cada', 'céda'),\n",
+       " ('mesmo', 'zmesmo'),\n",
+       " ('nos', 'noâ'),\n",
+       " ('forma', 'fobma'),\n",
+       " ('seja', 'sejéa'),\n",
+       " ('então', 'enêão'),\n",
+       " ('criar', 'èriar'),\n",
+       " ('código', 'cóeigo'),\n",
+       " ('caso', 'casío'),\n",
+       " ('exemplo', 'áexemplo'),\n",
+       " ('tem', 'tĩem'),\n",
+       " ('usuário', 'usuárôio'),\n",
+       " ('dados', 'dfados'),\n",
+       " ('python', 'pgthon'),\n",
+       " ('nossa', 'nossah'),\n",
+       " ('além', 'alémè'),\n",
+       " ('assim', 'asõim'),\n",
+       " ('ter', 'teb'),\n",
+       " ('até', 'atĩ'),\n",
+       " ('bem', 'âem'),\n",
+       " ('design', 'desigen'),\n",
+       " ('trabalho', 'trabalàho'),\n",
+       " ('foi', 'foo'),\n",
+       " ('apenas', 'apenaũ'),\n",
+       " ('empresa', 'empresà'),\n",
+       " ('valor', 'valíor'),\n",
+       " ('será', 'serr'),\n",
+       " ('entre', 'entke'),\n",
+       " ('método', 'méqodo'),\n",
+       " ('precisamos', 'precisamops'),\n",
+       " ('ainda', 'ainàa'),\n",
+       " ('vai', 'van'),\n",
+       " ('conteúdo', 'ûconteúdo'),\n",
+       " ('seus', 'çeus'),\n",
+       " ('eu', 'eû'),\n",
+       " ('todos', 'todtos'),\n",
+       " ('tempo', 'temeo'),\n",
+       " ('sempre', 'semre'),\n",
+       " ('qual', 'quakl'),\n",
+       " ('ela', 'elaá'),\n",
+       " ('só', 'síó'),\n",
+       " ('utilizar', 'utiqizar'),\n",
+       " ('projeto', 'prhojeto'),\n",
+       " ('site', 'siàe'),\n",
+       " ('sem', 'seém'),\n",
+       " ('pelo', 'peln'),\n",
+       " ('alura', 'aléra'),\n",
+       " ('dia', 'tdia'),\n",
+       " ('tudo', 'tuúo'),\n",
+       " ('podemos', 'kpodemos'),\n",
+       " ('esse', 'eẽsse'),\n",
+       " ('já', 'jé'),\n",
+       " ('nosso', 'nçosso'),\n",
+       " ('são', 'sãô'),\n",
+       " ('dos', 'odos'),\n",
+       " ('muito', 'tuito'),\n",
+       " ('imagem', 'imõgem'),\n",
+       " ('sua', 'siua'),\n",
+       " ('também', 'tamvbém'),\n",
+       " ('ele', 'elpe'),\n",
+       " ('fazer', 'façzer'),\n",
+       " ('temos', 'teos'),\n",
+       " ('essa', 'eũsa'),\n",
+       " ('quando', 'quaìdo'),\n",
+       " ('vamos', 'vjmos'),\n",
+       " ('sobre', 'sxobre'),\n",
+       " ('java', 'jkva'),\n",
+       " ('das', 'dms'),\n",
+       " ('agora', 'agtora'),\n",
+       " ('está', 'esútá'),\n",
+       " ('cada', 'cava'),\n",
+       " ('mesmo', 'medmo'),\n",
+       " ('nos', 'ános'),\n",
+       " ('forma', 'forûa'),\n",
+       " ('seja', 'smeja'),\n",
+       " ('então', 'enjtão'),\n",
+       " ('criar', 'criôar'),\n",
+       " ('código', 'cóàigo'),\n",
+       " ('caso', 'èaso'),\n",
+       " ('exemplo', 'exbemplo'),\n",
+       " ('tem', 'túem'),\n",
+       " ('usuário', 'usuárin'),\n",
+       " ('dados', 'daáos'),\n",
+       " ('python', 'pythoçn'),\n",
+       " ('nossa', 'nossk'),\n",
+       " ('além', 'âlém'),\n",
+       " ('assim', 'aóssim'),\n",
+       " ('ter', 'tãer'),\n",
+       " ('até', 'vté'),\n",
+       " ('bem', 'búm'),\n",
+       " ('design', 'íesign'),\n",
+       " ('trabalho', 'trabèalho'),\n",
+       " ('foi', 'kfoi'),\n",
+       " ('apenas', 'aapenas'),\n",
+       " ('empresa', 'pmpresa'),\n",
+       " ('valor', 'valoqr'),\n",
+       " ('será', 'sçerá'),\n",
+       " ('entre', 'entró'),\n",
+       " ('método', 'nétodo'),\n",
+       " ('precisamos', 'prefcisamos'),\n",
+       " ('ainda', 'sainda'),\n",
+       " ('vai', 'uai'),\n",
+       " ('conteúdo', 'cĩonteúdo'),\n",
+       " ('seus', 'sâus'),\n",
+       " ('eu', 'ìeu'),\n",
+       " ('todos', 'todás'),\n",
+       " ('tempo', 'utempo'),\n",
+       " ('sempre', 'sempce'),\n",
+       " ('qual', 'fual'),\n",
+       " ('ela', 'elal'),\n",
+       " ('só', 'skó'),\n",
+       " ('utilizar', 'utilĩzar'),\n",
+       " ('projeto', 'proójeto'),\n",
+       " ('site', 'isite'),\n",
+       " ('sem', 'secm'),\n",
+       " ('pelo', 'pẽlo'),\n",
+       " ('alura', 'aluéa'),\n",
+       " ('dia', 'dil'),\n",
+       " ('tudo', 'tudy'),\n",
+       " ('ela', 'qelay'),\n",
+       " ('só', 'sód'),\n",
+       " ('utilizar', 'dtilizacr'),\n",
+       " ('projeto', 'bprojõto'),\n",
+       " ('site', 'ysiteo'),\n",
+       " ('sem', 'sõêm'),\n",
+       " ('pelo', 'peàli'),\n",
+       " ('alura', 'asuraó'),\n",
+       " ('dia', 'deiìa'),\n",
+       " ('tudo', 'tuĩdoì'),\n",
+       " ('ela', 'eúaa'),\n",
+       " ('só', 'ró'),\n",
+       " ('utilizar', 'utilizẽaçr'),\n",
+       " ('projeto', 'prêjetó'),\n",
+       " ('site', 'sqiqte'),\n",
+       " ('sem', 'sũexm'),\n",
+       " ('pelo', 'pçlxo'),\n",
+       " ('alura', 'uluraa'),\n",
+       " ('dia', 'dĩaz'),\n",
+       " ('tudo', 'kzudo'),\n",
+       " ('corretor', 'correptor'),\n",
+       " ('tática', 'trtica'),\n",
+       " ('empoderamento', 'ewpoderamento'),\n",
+       " ('linux', 'lifux'),\n",
+       " ('cachorro', 'cachoçro'),\n",
+       " ('gato', 'îgato'),\n",
+       " ('cavalo', 'cakvalo'),\n",
+       " ('relógio', 'relógiuo'),\n",
+       " ('canela', 'canelac'),\n",
+       " ('tênis', 'tênisy'),\n",
+       " ('ansiosa', 'anciosa'),\n",
+       " ('ansiosa', 'ancciosa'),\n",
+       " ('ansiosa', 'ansioa'),\n",
+       " ('empoderamento', 'empoderamento'),\n",
+       " ('asterisco', 'asterístico'),\n",
+       " ('gratuito', 'gratuíto'),\n",
+       " ('entretido', 'entertido'),\n",
+       " ('ritmo', 'ritimo'),\n",
+       " ('idiota', 'indiota'),\n",
+       " ('tomara', 'tomare'),\n",
+       " ('seja', 'seje'),\n",
+       " ('prevalecer', 'provalecer'),\n",
+       " ('esteja', 'esteje'),\n",
+       " ('mendigo', 'mindigo'),\n",
+       " ('cérebro', 'célebro'),\n",
+       " ('perturbar', 'pertubar')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def cria_dados_teste(nome_arquivo):\n",
+    "    lista_palavra_teste = []\n",
+    "    f = open(nome_arquivo, 'r', encoding = 'utf-8')\n",
+    "    for linha in f:\n",
+    "        correta, errada = linha.split()\n",
+    "        lista_palavra_teste.append((correta, errada))\n",
+    "    f.close()\n",
+    "\n",
+    "    return lista_palavra_teste\n",
+    "\n",
+    "lista_teste = cria_dados_teste('palavras.txt')\n",
+    "lista_teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.08% de 186 palavras\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avaliador(teste):\n",
+    "    numero_palavras = len(teste)\n",
+    "    acertou = 0\n",
+    "    for correta, errada in teste:\n",
+    "        palavra_corrigida = corretor(errada)\n",
+    "        if palavra_corrigida == correta:\n",
+    "            acertou += 1\n",
+    "    taxa_acerto = round(acertou * 100/numero_palavras, 2)\n",
+    "    print(f'{taxa_acerto}% de {numero_palavras} palavras')\n",
+    "\n",
+    "avaliador(lista_teste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deletando_caracteres(fatias):\n",
+    "    novas_palavras = []\n",
+    "    for E, D in fatias:\n",
+    "            novas_palavras.append(E + D[1:])\n",
+    "    return novas_palavras\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alóigica', 'blóigica', 'clóigica', 'dlóigica', 'elóigica', 'flóigica', 'glóigica', 'hlóigica', 'ilóigica', 'jlóigica', 'klóigica', 'llóigica', 'mlóigica', 'nlóigica', 'olóigica', 'plóigica', 'qlóigica', 'rlóigica', 'slóigica', 'tlóigica', 'ulóigica', 'vlóigica', 'wlóigica', 'xlóigica', 'ylóigica', 'zlóigica', 'àlóigica', 'álóigica', 'âlóigica', 'ãlóigica', 'èlóigica', 'élóigica', 'êlóigica', 'ìlóigica', 'ílóigica', 'îlóigica', 'òlóigica', 'ólóigica', 'ôlóigica', 'õlóigica', 'ùlóigica', 'úlóigica', 'ûlóigica', 'çlóigica', 'laóigica', 'lbóigica', 'lcóigica', 'ldóigica', 'leóigica', 'lfóigica', 'lgóigica', 'lhóigica', 'lióigica', 'ljóigica', 'lkóigica', 'llóigica', 'lmóigica', 'lnóigica', 'loóigica', 'lpóigica', 'lqóigica', 'lróigica', 'lsóigica', 'ltóigica', 'luóigica', 'lvóigica', 'lwóigica', 'lxóigica', 'lyóigica', 'lzóigica', 'làóigica', 'láóigica', 'lâóigica', 'lãóigica', 'lèóigica', 'léóigica', 'lêóigica', 'lìóigica', 'líóigica', 'lîóigica', 'lòóigica', 'lóóigica', 'lôóigica', 'lõóigica', 'lùóigica', 'lúóigica', 'lûóigica', 'lçóigica', 'lóaigica', 'lóbigica', 'lócigica', 'lódigica', 'lóeigica', 'lófigica', 'lógigica', 'lóhigica', 'lóiigica', 'lójigica', 'lókigica', 'lóligica', 'lómigica', 'lónigica', 'lóoigica', 'lópigica', 'lóqigica', 'lórigica', 'lósigica', 'lótigica', 'lóuigica', 'lóvigica', 'lówigica', 'lóxigica', 'lóyigica', 'lózigica', 'lóàigica', 'lóáigica', 'lóâigica', 'lóãigica', 'lóèigica', 'lóéigica', 'lóêigica', 'lóìigica', 'lóíigica', 'lóîigica', 'lóòigica', 'lóóigica', 'lóôigica', 'lóõigica', 'lóùigica', 'lóúigica', 'lóûigica', 'lóçigica', 'lóiagica', 'lóibgica', 'lóicgica', 'lóidgica', 'lóiegica', 'lóifgica', 'lóiggica', 'lóihgica', 'lóiigica', 'lóijgica', 'lóikgica', 'lóilgica', 'lóimgica', 'lóingica', 'lóiogica', 'lóipgica', 'lóiqgica', 'lóirgica', 'lóisgica', 'lóitgica', 'lóiugica', 'lóivgica', 'lóiwgica', 'lóixgica', 'lóiygica', 'lóizgica', 'lóiàgica', 'lóiágica', 'lóiâgica', 'lóiãgica', 'lóiègica', 'lóiégica', 'lóiêgica', 'lóiìgica', 'lóiígica', 'lóiîgica', 'lóiògica', 'lóiógica', 'lóiôgica', 'lóiõgica', 'lóiùgica', 'lóiúgica', 'lóiûgica', 'lóiçgica', 'lóigaica', 'lóigbica', 'lóigcica', 'lóigdica', 'lóigeica', 'lóigfica', 'lóiggica', 'lóighica', 'lóigiica', 'lóigjica', 'lóigkica', 'lóiglica', 'lóigmica', 'lóignica', 'lóigoica', 'lóigpica', 'lóigqica', 'lóigrica', 'lóigsica', 'lóigtica', 'lóiguica', 'lóigvica', 'lóigwica', 'lóigxica', 'lóigyica', 'lóigzica', 'lóigàica', 'lóigáica', 'lóigâica', 'lóigãica', 'lóigèica', 'lóigéica', 'lóigêica', 'lóigìica', 'lóigíica', 'lóigîica', 'lóigòica', 'lóigóica', 'lóigôica', 'lóigõica', 'lóigùica', 'lóigúica', 'lóigûica', 'lóigçica', 'lóigiaca', 'lóigibca', 'lóigicca', 'lóigidca', 'lóigieca', 'lóigifca', 'lóigigca', 'lóigihca', 'lóigiica', 'lóigijca', 'lóigikca', 'lóigilca', 'lóigimca', 'lóiginca', 'lóigioca', 'lóigipca', 'lóigiqca', 'lóigirca', 'lóigisca', 'lóigitca', 'lóigiuca', 'lóigivca', 'lóigiwca', 'lóigixca', 'lóigiyca', 'lóigizca', 'lóigiàca', 'lóigiáca', 'lóigiâca', 'lóigiãca', 'lóigièca', 'lóigiéca', 'lóigiêca', 'lóigiìca', 'lóigiíca', 'lóigiîca', 'lóigiòca', 'lóigióca', 'lóigiôca', 'lóigiõca', 'lóigiùca', 'lóigiúca', 'lóigiûca', 'lóigiçca', 'lóigicaa', 'lóigicba', 'lóigicca', 'lóigicda', 'lóigicea', 'lóigicfa', 'lóigicga', 'lóigicha', 'lóigicia', 'lóigicja', 'lóigicka', 'lóigicla', 'lóigicma', 'lóigicna', 'lóigicoa', 'lóigicpa', 'lóigicqa', 'lóigicra', 'lóigicsa', 'lóigicta', 'lóigicua', 'lóigicva', 'lóigicwa', 'lóigicxa', 'lóigicya', 'lóigicza', 'lóigicàa', 'lóigicáa', 'lóigicâa', 'lóigicãa', 'lóigicèa', 'lóigicéa', 'lóigicêa', 'lóigicìa', 'lóigicía', 'lóigicîa', 'lóigicòa', 'lóigicóa', 'lóigicôa', 'lóigicõa', 'lóigicùa', 'lóigicúa', 'lóigicûa', 'lóigicça', 'lóigicaa', 'lóigicab', 'lóigicac', 'lóigicad', 'lóigicae', 'lóigicaf', 'lóigicag', 'lóigicah', 'lóigicai', 'lóigicaj', 'lóigicak', 'lóigical', 'lóigicam', 'lóigican', 'lóigicao', 'lóigicap', 'lóigicaq', 'lóigicar', 'lóigicas', 'lóigicat', 'lóigicau', 'lóigicav', 'lóigicaw', 'lóigicax', 'lóigicay', 'lóigicaz', 'lóigicaà', 'lóigicaá', 'lóigicaâ', 'lóigicaã', 'lóigicaè', 'lóigicaé', 'lóigicaê', 'lóigicaì', 'lóigicaí', 'lóigicaî', 'lóigicaò', 'lóigicaó', 'lóigicaô', 'lóigicaõ', 'lóigicaù', 'lóigicaú', 'lóigicaû', 'lóigicaç', 'óigica', 'ligica', 'lógica', 'lóiica', 'lóigca', 'lóigia', 'lóigic', 'lóigica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "palavra_exemplo = 'lóigica'\n",
+    "def gerador_palavras(palavra):\n",
+    "    fatias = []\n",
+    "    for i in range(len(palavra) + 1):\n",
+    "        fatias.append((palavra[:i], palavra[i:]))    \n",
+    "    palavras_geradas  = insere_letras(fatias)\n",
+    "    palavras_geradas += deletando_caracteres(fatias)\n",
+    "    return palavras_geradas\n",
+    "\n",
+    "palavras_geradas = gerador_palavras(palavra_exemplo)\n",
+    "print(palavras_geradas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41.4% de 186 palavras\n"
+     ]
+    }
+   ],
+   "source": [
+    "avaliador(lista_teste)"
    ]
   },
   {
