escolhendo qual Corretor usar

--- a/Corretor.ipynb
+++ b/Corretor.ipynb
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "691744"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,23 +870,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'lógica'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +893,6 @@
     "    for palavra in todas_palavras:\n",
     "        if palavra in vocabulario:\n",
     "            candidatos.append(palavra)\n",
-    "    print(len(candidatos))\n",
     "    palavra_correta  = max(candidatos, key =probabilidade)\n",
     "    return palavra_correta\n",
     "\n",
@@ -909,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -925,13 +917,209 @@
        "'lógica'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "novo_corretor(palavra_exemplo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "esje_esse_se\n",
+      "sãêo_são_não\n",
+      "dosa_dos_do\n",
+      "eme_em_de\n",
+      "eàssa_essa_esse\n",
+      "daõs_das_da\n",
+      "céda_cada_da\n",
+      "noâ_no_o\n",
+      "enêão_então_não\n",
+      "tĩem_tem_em\n",
+      "nossah_nossa_nosso\n",
+      "teb_tem_de\n",
+      "atĩ_até_a\n",
+      "âem_em_de\n",
+      "foo_foi_o\n",
+      "serr_ser_se\n",
+      "entke_entre_então\n",
+      "van_vai_a\n",
+      "çeus_seus_seu\n",
+      "eû_e_de\n",
+      "temeo_tempo_temos\n",
+      "semre_sempre_ser\n",
+      "elaá_ela_ele\n",
+      "síó_só_se\n",
+      "siàe_site_se\n",
+      "seém_sem_em\n",
+      "peln_pelo_ele\n",
+      "aléra_alura_agora\n",
+      "tdia_dia_da\n",
+      "tuúo_tudo_tipo\n",
+      "jé_é_de\n",
+      "sãô_são_não\n",
+      "odos_dos_do\n",
+      "siua_sua_seu\n",
+      "elpe_ele_esse\n",
+      "teos_temos_os\n",
+      "eũsa_essa_esse\n",
+      "vjmos_vamos_temos\n",
+      "dms_dos_de\n",
+      "cava_java_para\n",
+      "ános_nos_no\n",
+      "èaso_caso_as\n",
+      "túem_tem_em\n",
+      "daáos_dados_dos\n",
+      "nossk_nosso_nosso\n",
+      "tãer_ter_ser\n",
+      "vté_até_é\n",
+      "búm_bem_um\n",
+      "sçerá_será_ser\n",
+      "entró_entre_então\n",
+      "uai_vai_a\n",
+      "sâus_seus_seu\n",
+      "ìeu_seu_de\n",
+      "fual_qual_sua\n",
+      "elal_ela_ele\n",
+      "skó_só_se\n",
+      "secm_sem_em\n",
+      "aluéa_alura_além\n",
+      "dil_dia_de\n",
+      "sód_só_se\n",
+      "eúaa_aeúaa_essa\n",
+      "ró_só_de\n",
+      "dĩaz_adĩaz_da\n",
+      "correptor_corretor_correto\n",
+      "trtica_tática_prática\n",
+      "ewpoderamento_aewpoderamento_ewpoderamento\n",
+      "îgato_gato_fato\n",
+      "cakvalo_acakvalo_carvalho\n",
+      "canelac_acanelac_janela\n",
+      "tênisy_atênisy_tênisy\n",
+      "anciosa_aanciosa_ansioso\n",
+      "ancciosa_aancciosa_ancciosa\n",
+      "ansioa_aansioa_antiga\n",
+      "asterístico_aasterístico_asterístico\n",
+      "entertido_aentertido_entendido\n",
+      "ritimo_ritmo_ótimo\n",
+      "indiota_aindiota_indica\n",
+      "tomare_tomar_tomar\n",
+      "seje_seja_se\n",
+      "provalecer_aprovalecer_prevalece\n",
+      "esteje_esteja_este\n",
+      "mindigo_amindigo_indico\n",
+      "pertubar_apertubar_derrubar\n",
+      "55.38% de 186 palavras, desconecida é 6.99%\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avaliador(teste, vocabulario):\n",
+    "    numero_palavras = len(teste)\n",
+    "    acertou = 0\n",
+    "    desconhecida = 0\n",
+    "    for correta, errada in teste:\n",
+    "        palavra_corrigida = novo_corretor(errada)\n",
+    "        desconhecida += (correta not in vocabulario)\n",
+    "        if palavra_corrigida == correta:\n",
+    "            acertou += 1\n",
+    "        else:\n",
+    "            print(errada + '_' + corretor(errada) + '_' + palavra_corrigida)\n",
+    "    taxa_acerto = round(acertou * 100/numero_palavras, 2)\n",
+    "    taxa_desconhecida = round(desconhecida * 100 / numero_palavras, 2)\n",
+    "    print(f'{taxa_acerto}% de {numero_palavras} palavras, desconecida é {taxa_desconhecida}%')\n",
+    "\n",
+    "vocabulario = set(lista_normalizada)\n",
+    "avaliador(lista_teste, lista_normalizada)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76.34% de 186 palavras, desconecida é 6.99%\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avaliador(teste, vocabulario):\n",
+    "    numero_palavras = len(teste)\n",
+    "    acertou = 0\n",
+    "    desconhecida = 0\n",
+    "    for correta, errada in teste:\n",
+    "        palavra_corrigida = corretor(errada)\n",
+    "        desconhecida += (correta not in vocabulario)\n",
+    "        if palavra_corrigida == correta:\n",
+    "            acertou += 1\n",
+    "    taxa_acerto = round(acertou * 100/numero_palavras, 2)\n",
+    "    taxa_desconhecida = round(desconhecida * 100 / numero_palavras, 2)\n",
+    "    print(f'{taxa_acerto}% de {numero_palavras} palavras, desconecida é {taxa_desconhecida}%')\n",
+    "\n",
+    "vocabulario = set(lista_normalizada)\n",
+    "avaliador(lista_teste, lista_normalizada)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "palavra = 'comooo'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'como'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "novo_corretor(palavra)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'acomooo'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corretor(palavra)"
    ]
   },
   {
